# lab3_Dylan_Joy

./: .coverage  .dockerignore  .env  Dockerfile  LOAD_TEST_REPORT.md  LOAD_TEST_REPORT_.md  README.md  locustfile.py  pyproject.toml  requirements.txt  sample_input.json  test_app.py  train.py
UNKNOWN.egg-info/: SOURCES.txt
app/: main.py
app/data/: features.json  labels.json
tests/: test_api.py  test_edges_cases.py  test_model.py  test_validation.py
